--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <hedaer>
+        <nav>
+            <div class="col-lg-6">
+                <h4>Golden</h4>
+            </div>
+            <div class="col-lg-6">
+                <ul>
+                    <li>
+                        <a href="#">HOME</a>
+                    </li>
+                    <li>
+                        <a href="#">SERVICES</a>
+                    </li>
+                    <li>
+                        <a href="#">PORTFOLIO</a>
+                    </li>
+                    <li>
+                        <a href="#">ABOUT</a>
+                    </li>
+                    <li>
+                        <a href="#">CONTACT</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="container">
+            <h2>Welcome To Our Studio!</h2>
+            <h1>IT'S NICE TO MEET YOU</h1>
+            <a href="#">TELL ME MORE</a>
+        </div>
+    </hedaer>
 </body>
 </html>
