Add Style to navigation

--- a/index.html
+++ b/index.html
@@ -8,29 +8,31 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <hedaer>
+    <header>
         <nav>
-            <div class="col-lg-6">
-                <h4>Golden</h4>
-            </div>
-            <div class="col-lg-6">
-                <ul>
-                    <li>
-                        <a href="#">HOME</a>
-                    </li>
-                    <li>
-                        <a href="#">SERVICES</a>
-                    </li>
-                    <li>
-                        <a href="#">PORTFOLIO</a>
-                    </li>
-                    <li>
-                        <a href="#">ABOUT</a>
-                    </li>
-                    <li>
-                        <a href="#">CONTACT</a>
-                    </li>
-                </ul>
+            <div class="row">
+                <div class="col-lg-5 name-landing-page">
+                    <a href="#">Golden</a>
+                </div>
+                <div class="col-lg-5 list-nav">
+                    <ul>
+                        <li>
+                            <a href="#">HOME</a>
+                        </li>
+                        <li>
+                            <a href="#">SERVICES</a>
+                        </li>
+                        <li>
+                            <a href="#">PORTFOLIO</a>
+                        </li>
+                        <li>
+                            <a href="#">ABOUT</a>
+                        </li>
+                        <li>
+                            <a href="#">CONTACT</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
         <div class="container">
@@ -38,6 +40,6 @@
             <h1>IT'S NICE TO MEET YOU</h1>
             <a href="#">TELL ME MORE</a>
         </div>
-    </hedaer>
+    </header>
 </body>
 </html>
