Add Style to header

--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
                 </div>
             </div>
         </nav>
-        <div class="container">
-            <h2>Welcome To Our Studio!</h2>
-            <h1>IT'S NICE TO MEET YOU</h1>
-            <a href="#">TELL ME MORE</a>
+        <div class="splash">
+            <div class="splash-inner">
+                <h2>Welcome To Our Studio!</h2>
+                <h1>IT'S NICE TO MEET YOU</h1>
+                <a href="#">TELL ME MORE</a>
+            </div>
         </div>
     </header>
 </body>
