Add Style to section service

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </header>
     <section class="services">
         <div class="container">
-            <h2 class="subpage-title">Services</h2>
+            <h2 class="subpage-title">SERVICES</h2>
             <h4 class="description-subpage">Etiam nulla tellus, gravida id sapien.</h4>
             <div class="row">
                 <div class="col-lg-4">
@@ -55,12 +55,12 @@
                 </div>
                 <div class="col-lg-4">
                     <img src="/images/computer.PNG" alt="image">
-                    <h3>E-Commerce</h3>
+                    <h3>Responsive Web</h3>
                     <p>Fusce erat tortor, rhoncus eu suscipit eget, porttitor sit amet neque. Curabitur id risus libero. Nulla non cursus.</p>
                 </div>
                 <div class="col-lg-4">
                     <img src="/images/padlock.PNG" alt="image">
-                    <h3>E-Commerce</h3>
+                    <h3>Web Security</h3>
                     <p>Fusce erat tortor, rhoncus eu suscipit eget, porttitor sit amet neque. Curabitur id risus libero. Nulla non cursus.</p>
                 </div>
             </div>
