--- a/index.html
+++ b/index.html
@@ -71,58 +71,70 @@
             <h2 class="subpage-title">OUR PORTFOLIO</h2>
             <h4 class="description-subpage">Etiam nulla tellus, gravida id sapien.</h4>
             <div class="row">
-                <div class="col-lg-4 box">
-                    <div class="box-image">
-                        <img src="/images/box-image-1.PNG" alt="image">
-                    </div>
-                    <div class="box-body">
-                        <h3>Ebony &amp; Ivory</h3>
-                        <p>Branding</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 box">
-                    <div class="box-image">
-                        <img src="/images/box-image-2.PNG" alt="image">
-                    </div>
-                    <div class="box-body">
-                        <h3>Smart Stationary</h3>
-                        <p>Print Design</p>
+                <div class="col-lg-4">
+                    <div class="box">
+                        <div class="box-image">
+                            <img src="/images/box-image-1.PNG" alt="image">
+                        </div>
+                        <div class="box-body">
+                            <h3>Ebony &amp; Ivory</h3>
+                            <p>Branding</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-4 box">
-                    <div class="box-image">
-                        <img src="/images/box-image-3.PNG" alt="image">
-                    </div>
-                    <div class="box-body">
-                        <h3>Clever Poster</h3>
-                        <p>Print Design</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 box">
-                    <div class="box-image">
-                        <img src="/images/box-image-4.PNG" alt="image">
-                    </div>
-                    <div class="box-body">
-                        <h3>Vinyl Record</h3>
-                        <p>Product Mock-Up</p>
+                <div class="col-lg-4">
+                    <div class="box">
+                        <div class="box-image">
+                            <img src="/images/box-image-2.PNG" alt="image">
+                        </div>
+                        <div class="box-body">
+                            <h3>Smart Stationary</h3>
+                            <p>Print Design</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-4 box">
-                    <div class="box-image">
-                        <img src="/images/box-image-5.PNG" alt="image">
-                    </div>
-                    <div class="box-body">
-                        <h3>Treehouse Template</h3>
-                        <p>Web Design</p>
+                <div class="col-lg-4">
+                    <div class="box">
+                        <div class="box-image">
+                            <img src="/images/box-image-3.PNG" alt="image">
+                        </div>
+                        <div class="box-body">
+                            <h3>Clever Poster</h3>
+                            <p>Print Design</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-4 box">
-                    <div class="box-image">
-                        <img src="/images/box-image-6.PNG" alt="image">
+                <div class="col-lg-4">
+                    <div class="box">
+                        <div class="box-image">
+                            <img src="/images/box-image-4.PNG" alt="image">
+                        </div>
+                        <div class="box-body">
+                            <h3>Vinyl Record</h3>
+                            <p>Product Mock-Up</p>
+                        </div>
                     </div>
-                    <div class="box-body">
-                        <h3>Burned Logo</h3>
-                        <p>Branding</p>
+                </div>
+                <div class="col-lg-4">
+                    <div class="box">
+                        <div class="box-image">
+                            <img src="/images/box-image-5.PNG" alt="image">
+                        </div>
+                        <div class="box-body">
+                            <h3>Treehouse Template</h3>
+                            <p>Web Design</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="box">
+                        <div class="box-image">
+                            <img src="/images/box-image-6.PNG" alt="image">
+                        </div>
+                        <div class="box-body">
+                            <h3>Burned Logo</h3>
+                            <p>Branding</p>
+                        </div>
                     </div>
                 </div>
             </div>
