Add HTML structure footer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Golden</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
     <link rel="stylesheet" href="vendor/bootstrap-grid.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -140,5 +141,30 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <h6>© Copyright 2014 FreebiesXpress.com</h6>
+                </div>
+                <div class="col-lg-8">
+                    <ul>
+                        <li>
+                            <a href="#"><i class="fa-brands fa-twitter"></i>Twitter</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa-brands fa-facebook-f"></i>Facebook</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa-brands fa-pinterest-p"></i>Printers</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa-brands fa-google-plus-g"></i>Google Plus</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
