--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <body>
     <header>
         <nav>
+            <div class="container">
             <div class="row">
                 <div class="col-lg-5 name-landing-page">
                     <a href="#">Golden</a>
                 </div>
-                <div class="col-lg-5 list-nav">
+                <div class="col-lg-7 list-nav">
                     <ul>
                         <li>
                             <a href="#">HOME</a>
@@ -34,6 +35,7 @@
                         </li>
                     </ul>
                 </div>
+            </div>
             </div>
         </nav>
         <div class="splash">
