--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-5">
                     <h6>© Copyright 2014 FreebiesXpress.com</h6>
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-8 col-md-7">
                     <ul>
                         <li>
                             <a href="#"><i class="fa-brands fa-twitter"></i>Twitter</a>
